--- a/style.css
+++ b/style.css
@@ -41,3 +41,91 @@ body {
   font-size: 2.5rem;
   margin: 0;
 }
+
+/* Content area/sidebar container */
+.content_wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+}
+
+/* Side bar */
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  width: 10vw;
+  height: calc(100vh - 10vh); /* 10vw is the width of the sidebar */
+  border-right: 0.3vw solid lightgrey;
+}
+
+.sidebar ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
+
+.sidebar ul li {
+  flex-shrink: 1;
+  list-style: none;
+}
+
+.sidebar ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 1vw;
+}
+
+#sidebar_title {
+  align-self: center;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+#sidebar_title a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.3vw;
+}
+
+/* Main content area */
+.main_content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.main_content section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex-grow: 1;
+}
+
+.main_content section h2 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.main_content section ul {
+  display: flex;
+  padding: 0;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.main_content section ul li {
+  list-style: none;
+  text-align: center;
+  flex-grow: 1;
+}
+
+.main_content section ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.2vw;
+}
